[project]
name = "sealion-ai-service"
version = "0.1.0"
description = "AI-powered travel planning service using SEA-LION LLM and RAG"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "openai>=1.3.0",
    "python-dotenv>=1.0.0",
    "sentence-transformers>=2.2.2",
    "qdrant-client>=1.6.9",
    "youtube-transcript-api>=0.6.1",
    "pydantic>=2.5.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]
